# vibe-scraper

./: .env.example  README.md  pyproject.toml
src/: __init__.py  config.py  main.py
src/api/: routes.py  scrape_history_routes.py
src/database/: __init__.py  mongodb.py
src/models/: schemas.py
src/repositories/: scrape_repository.py
src/scrapers/: base.py  dynamic.py  static.py  table_parser.py
src/services/: scraper_service.py
tests/: test_api.py
